--- a/themes/custom/user_list/page.html.twig
+++ b/themes/custom/user_list/page.html.twig
@@ -55,6 +55,16 @@
   <main role="main">
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
 
+    <div class="sort-container">
+      <div class="sort-dropdown">
+        <div class="drop-trigger">SORT  <span>&#187;</span></div>
+        <div class="dropdown-content">
+          <div class="drop-first-op">By Last Name</div>
+          <div class="drop-second-op">By Time Added</div>
+        </div>
+      </div>
+    </div>
+
     <div class="layout-content">
       {{ page.content }}
     </div>{# /.layout-content #}
