--- a/themes/custom/user_list/css/style.css
+++ b/themes/custom/user_list/css/style.css
@@ -68,7 +68,9 @@ body {
 
 .layout-sidebar-first {
     position: fixed;
-    top: 45px;
+    bottom: 70px;
+    left: 6px;
+    transform: rotate(-90deg);
 }
 
 .tooltip-text {
@@ -223,6 +225,12 @@ body {
     cursor: pointer;
 }
 
+.login-ul {
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0;
+}
+
 @media only screen and (min-width: 768px){
     .header {
         padding: 0 60px;
@@ -263,6 +271,10 @@ body {
 
     .dropdown-content {
         right: -36%;
+    }
+
+    .layout-sidebar-first {
+        left: 57px;
     }
 }
 
